[package]
name = "secops"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
x509-parser = "0.16.0"
chrono = "0.4.34"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
colored = "2.1.0"
indicatif = "0.17.8"
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
rust-embed = "8.2.0"
mime_guess = "2.0.4"
