[package]
name = "secops"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
x509-parser = "0.16.0"
chrono = "0.4.34"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
colored = "2.1.0"
comfy-table = "7.1.0"
indicatif = "0.17.8"
console = "0.15.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
trust-dns-resolver = "0.23"
