[package]
name = "aegis-tls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
x509-parser = "0.16.0"
chrono = "0.4.38"
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
colored = "2.1.0"
comfy-table = "7.1.0"
indicatif = "0.17.8"
console = "0.15.8"
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
rust-embed = "8.3.0"
dialoguer = "0.11.0"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
hickory-resolver = "0.24.1"
